# task-management-api

./: .gitignore  README.md  alembic.ini  auth.py  database.py  docker-compose.yml  exceptions.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py  security.py
migrations/: env.py
migrations/versions/: 02965402f729_your_changes.py
